test/fixtures/themes/002-comment-id/invalid/default.hbs
<html>
<body>
    <script>
        this.page.identifier = 'ghost-{{id}}';
    </script>
</body>
</html>